cabal-version: 3.0

name:                   bcc-node-chairman
version:                1.99.0
description:            The bcc full node
author:                 TBCO
maintainer:             operations@blockchain-company.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

executable bcc-node-chairman
  import:               base, project-config

  hs-source-dirs:       app
  main-is:              bcc-node-chairman.hs
  other-modules:        Bcc.Chairman
                        Bcc.Chairman.Commands
                        Bcc.Chairman.Commands.Version
                        Bcc.Chairman.Commands.Run
                        Paths_bcc_node_chairman
  ghc-options:          -threaded
                        -rtsopts
                        "-with-rtsopts=-T"
  build-depends:        bytestring
                      , bcc-api
                      , bcc-config
                      , bcc-ledger-cole
                      , bcc-node
                      , bcc-prelude
                      , containers
                      , contra-tracer
                      , io-classes
                      , network-mux
                      , optparse-applicative-fork
                      , shardagnostic-consensus
                      , shardagnostic-network
                      , shardagnostic-network-framework
                      , text
                      , time

test-suite chairman-tests
  import:               base, project-config

  hs-source-dirs:       test

  main-is:              Main.hs

  type:                 exitcode-stdio-1.0

  build-depends:        bcc-testnet
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , network
                      , process
                      , random
                      , resourcet
                      , tasty
                      , tasty-hedgehog
                      , unliftio

  other-modules:        Spec.Chairman.Chairman
                        Spec.Chairman.Cole
                        Spec.Chairman.Bcc
                        Spec.Chairman.Sophie
                        Spec.Network

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  build-tool-depends:   bcc-node:bcc-node
                      , bcc-cli:bcc-cli
                      , bcc-node-chairman:bcc-node-chairman
